--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "netlify-cli": "^17.33.4",
